[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Dag/Run1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Dag/Run4.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Dag/Jump0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Dag/Run2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Dag/Run3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Dag/Run0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Dag/Fall0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Dag/Run5.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Dag/Idle0.png" type="Texture" id=9]
[ext_resource path="res://Player.gd" type="Script" id=10]
[ext_resource path="res://Sprites/Dag/Fire1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Dag/Fire2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Dag/Fire0.png" type="Texture" id=13]
[ext_resource path="res://Fire 1.mp3" type="AudioStream" id=14]
[ext_resource path="res://jump1.ogg" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.0
height = 30.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 79, 816 )
collision_layer = 2
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 4 )
frames = SubResource( 2 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 2.5 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 35, 9 )

[node name="soundShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="soundJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_Sprite_animation_finished"]
